# pihole-lcd-status-rs

./: .travis.yml  Cargo.toml  README.md
adafruit/: Cargo.toml  README.md
adafruit/src/: errors.rs  gpio.rs  helpers.rs  lib.rs
pihole-lcd-status/: Cargo.toml  Makefile
pihole-lcd-status/src/: main.rs
rustberrypi/: Cargo.toml
rustberrypi/src/: errors.rs  lib.rs
rustberrypi/src/i2c/: mod.rs
rustberrypi/src/i2c/io/: mod.rs
rustberrypi/src/i2c/lcd/: helpers.rs  mod.rs
rustberrypi/src/i2c/led/: demo.rs  mod.rs
rustberrypi/src/i2c/temperature/: mod.rs
src/: main.rs
winterr/: Cargo.toml  Makefile  deploy
winterr/src/: errors.rs  main.rs  sensor.rs  weather.rs  winterr.rs
