[package]
name = "winterr"
version = "0.1.0"
authors = ["Gabriel Feron <feron.gabriel@gmail.com>"]
edition = "2018"
license = "WTFPL"

[dependencies]
rustberrypi = { path = "../rustberrypi" }
failure = "0.1"
influx_db_client = { git = "https://github.com/gferon/InfluxDBClient-rs" }
env_logger = "*"
log = "*"