[package]
name = "winterr"
version = "0.1.0"
authors = ["Gabriel Feron <feron.gabriel@gmail.com>"]
edition = "2018"
license = "WTFPL"

[dependencies]
rustberrypi = { path = "../rustberrypi" }
ctrlc = { version = "3.1", features = ["termination"] }
failure = "0.1"
influx_db_client = "*"
env_logger = "*"
log = "*"
structopt = "0.2"
hyper = "0.12"
hyper-tls = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[bin]]
name = "winterr"
path = "src/main.rs"

[[bin]]
name = "weatherr"
path = "src/weather.rs"